# kobuki

./: field.sdf  follower-cshift.py  follower.py  laser_point_publisher_front.py  point_follower_front.py  table.xml
comp3/: CMakeLists.txt  package.xml  readme.txt
comp4/: CMakeLists.txt  package.xml  points.txt
comp5/: CMakeLists.txt  package.xml
demo1/: README.md  package.xml
demo5/: package.xml
demo6/: CMakeLists.txt  package.xml
devel/: .catkin  .rosinstall  setup.sh
frg_rover/: CMakeLists.txt  (+1 more)
racer/leg_tracker/: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~
racer/leg_tracker/config/: husky_ekf.yaml
racer/leg_tracker/launch/: ekf.launch  ekf.launch~  person_tracker_confidences.launch~  single_person_tracker.launch  single_person_tracker.launch~  stationary_person_tracker_confidences.launch~  train_leg_detector_poly.launch~
racer/leg_tracker/scripts/: single_person_tracker.py
racer/leg_tracker/src/: extract_positive_training_clusters.cpp  laser_processor.cpp  train_leg_detector.cpp
src/demo1/: CMakeLists.txt
src/demo1/cfg/: lineColor.cfg
src/demo1/scripts/: follower_p.py  racer_color.py
src/racer/: CMakeLists.txt  course.launch  racer.py
src/racer/cfg/: lineColor.cfg
src/racer/leg_tracker/: package.xml
src/racer/leg_tracker/launch/: person_tracker_confidences_smartwheelr.launch~  stationary_left_person_tracker_confidences.launch~
src/racer/leg_tracker/scripts/: kalman_confidence_person_tracker_more_negative.py~  multi_person_kalman_tracker.py~
src/racer/leg_tracker/src/: detect_leg_clusters.cpp~  train_leg_detector.cpp~
(+116 files in other folders)
